apps/shared-gateways/base/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: nginx-fabric
    - name: archmirror-https
      protocol: HTTPS
      hostname: mirrors.nahue.ar
      port: 443
      allowedRoutes:
        namespaces:
          from: mirrors
      tls:
        mode: Terminate
        certificateRefs:
          - name: mirrors
            kind: Secret
            group: ""
